--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #223c5f;
+    background-color: #20451e;
     color: #fff;
     padding: 1em 0;
     text-align: center;
@@ -44,7 +44,7 @@ ul {
 }
 
 footer {
-    background-color: #223c5f;
+    background-color: #20451e;
     color: #fff;
     text-align: center;
     padding: 10px;
