--- a/style.css
+++ b/style.css
@@ -94,8 +94,9 @@ main {
 }
 
 img {
-    max-width: 100%;
-    height: 100px;
+    margin: 0 auto;
+    max-width: 100%; 
+    height: auto; 
 }
 
 ul {
