--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav a:hover {
 
 h1, h2, h3, h4 {
     color: #fa9e64;
+    font-size: 20px;
 }
 
 p {
@@ -46,6 +47,7 @@ img {
 ul {
     list-style-type: disc;
     padding-left: 20px;
+    font-size: 20px;
 }
 
 footer {
